--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>forever-agent</artifactId>
-    <version>0.5.3</version>
+    <version>0.5.4-SNAPSHOT</version>
     <name>forever-agent</name>
     <description>WebJar for forever-agent</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>https://github.com/webjars/forever-agent</url>
         <connection>scm:git:https://github.com/webjars/forever-agent.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/forever-agent.git</developerConnection>
-        <tag>forever-agent-0.5.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
